# trader-v1

./: .gitignore  README.md  __init__.py  dashboard.py  package-lock.json  paths_backup.py  pyproject.toml  pyprojectold.toml  requirements-dev.txt  requirements.txt  test.py  tickers.json
.windsurf/rules/: data-base-rules.md  database-use.md  project-rules.md  signles-rules.md  system-rules.md
alembic/: env.py
alembic/versions/: 16eeae790ac7_add_unique_constraint_to_ticker_.py  20d54faa5e8f_add_unique_constraint_to_ticker_.py  44a1a37820ef_baseline.py  77e5b9c74f3f_initial_migration.py  bcb0dd3c5c9b_add_signal_type_to_tickers_signals.py
core/: __init__.py  logger.py
core/config/: __init__.py  console.py  constants.py  paths.py  paths.py.old  settings.py  utils.py
core/data/: __init__.py  cleaner.py  downloader.py  loader.py  pipeline.py  simulator.py
core/db/: deps.py  session.py
core/scheduler/: __init__.py  data_manager.py  job_runner.py  market_hours.py  scheduler.py
core/signals/: __init__.py  confidence.py  moving_average.py  signal_generator.py
docs/: README.md  README_scheduler.md  alembic_migration_guide.md  dashboard_guide.md  download_tickers_cli.md  dynamic_confidence_threshold.md  json_logging.md  pipeline_workflow.md  quick_reference.md  scheduler_docs.md  signal_workflow.md
examples/: generate_signal_example.py
logs/: log_20250709.jsonl
scripts/: compare_signal_strategies.py  download_tickers.py  generate_ma_signals.py  init_db.py  list_signals.py  process_simulated_signals.py  regenerate_signals.py  run_pipeline.py  run_scheduler.py  scheduler.py  scheduler_metadata.py  show_help.py  test_logger.py  test_scheduler.py  test_signal_insertion.py  test_simulator.py
scripts/dashboard/: data_cleaner.py  main.py  pipeline_operations.py  (+1 more)
test_output/: AAPL_dynamic_20250709.csv  TEST_20250101.csv
tests/: test_config.py  test_dynamic_confidence.py
traders-agent/: main.py  server.py
ui/: __init__.py  data_display.py  event_content.py  scheduler_display.py
(+83 files in other folders)
