[project]
name = "trader-v1"
version = "0.1.0"
description = "Stock trading prediction system"
authors = [
    {name = "MotiTheWizerd",email = "motielmakayes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
package-mode = false
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pandas (>=1.5.0,<2.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "google-adk (>=1.5.0,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
    "finnhub-python (>=2.4.24,<3.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
